# optileno

./: .dockerignore  .gitignore  AI_ANALYTICS_SYNC_FIXES_SUMMARY.md  DATABASE_SCHEMA_FIXES_SUMMARY.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  Procfile  README_PRODUCTION.md  SUPABASE_SCHEMA.sql  TEST_PLANNER_FIXES.ps1  TEST_REPORT_AI_ANALYTICS_FIXES.md  analytics_check_output.txt  big_five_test_output.txt  client.py  debug_behavior_timeline.py  debug_startup.py  deploy.ps1  docker-compose.prod.yml  docker-compose.ssl.yml  docker-compose.yml  fix_db_schema.py  json_removal_output.txt  nginx.prod.conf  nixpacks.toml  package-lock.json  package.json  port8000.txt  pyproject.toml  python_test_out.txt  railway.toml  render.yaml  test_ai_agent.py  test_enhanced_analytics.py  test_json_removal.py  tmp_start_task.py  verification_result.txt  verification_result_final.txt  verify_db.py  verify_db_final.py
backend/: .dockerignore  .env.example  Dockerfile  __init__.py  alembic.ini  backend_bcrypt_version.txt  backend_bcrypt_version_utf8.txt  debug_big_five.py  debug_passlib.txt  error_output.txt  fix_database.py  print_bcrypt_version.py  read_error_log.py  read_version.py  requirements.txt  result.txt  result_auth_utils_fixed.txt  result_bcrypt.txt  result_short.txt  result_truncate.txt  result_truncate_50.txt  result_truncate_50_str.txt  result_truncate_71.txt  start.sh  test_all_final.py  test_analytics_comprehensive.py  test_auth_utils.py  test_auth_utils_fixed.py  test_bcrypt.py  test_big_five_fix.py  test_goal_final.py  test_habit.py  test_habit_final.py  (+10 more)
(+364 files in other folders)
