[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concierge-backend"
version = "1.0.0"
description = "Concierge AI Backend"
authors = [{name = "Developer", email = "dev@example.com"}]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]